stacks/nimbus/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prater-nimbus
spec:
  serviceName: prater-nimbus
  selector:
    matchLabels:
      app: prater-nimbus
  replicas: 1
  template:
    metadata:
      labels:
        app: prater-nimbus
    spec:
      containers:
        - name: prater-nimbus
          args: [
            "--network=prater",
            "--tcp-port=9000",
            "--udp-port=9000",
            "--enr-auto-update",
            "--data-dir=/home/user/nimbus-eth2/build/data/shared_prater_0",
            "--web3-url=ws://goerli-geth:8546",
            "--log-level=INFO",
            "--metrics",
            "--metrics-address=0.0.0.0",
            "--metrics-port=8008"
          ]
          image: statusim/nimbus-eth2:amd64-latest
          resources:
            limits:
              memory: 12000Mi
            requests:
              memory: 10000Mi
          ports:
            - containerPort: 9000
            - containerPort: 8008
          resources: {}
          volumeMounts:
            - mountPath: /home/user/nimbus-eth2/build/data
              name: prater-nimbus-data
      restartPolicy: Always
      volumes:
        - name: prater-nimbus-data
          persistentVolumeClaim:
            claimName: prater-nimbus-data
