stacks/nimbus/service-internal.yml
apiVersion: v1
kind: Service
metadata:
  name: prater-nimbus
  namespace: validators
spec:
  selector:
    app: prater-nimbus
  ports:
    - name: "8008"
      port: 8008
      targetPort: 8008
status:
  loadBalancer: {}
